styles.css
body{
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(255, 155, 24);
}

.card{
    width: 500px;
    height: 300px;
    border-radius: 10px;
    box-sizing: border-box;
    background: rgb(0, 114, 255);
    background: radial-gradient(
        circle,
        rgba(0, 114, 255, 1) 1%,
        rgba(33, 25, 173, 1) 100%
    );
    margin: 100px auto;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
    padding: 15px;
}
.holder{
    font-size: x-large;
    color: white;
    padding-top: 50px;
    font-weight: bold;
}
.card input{
    border-radius: 5px;
    font-size: 28px;
    padding: 10px;
    border: solid 1px rgb(45, 154, 226);
    color: white;
    background-color: transparent;
    margin: 15px 0;
    outline: none;
}
.card #inputDate{
    width: 80px;
}
.card #inputCVV{
    width: 50px;
}

